# searchTools-main

./: .gitignore  API_SETUP.md  CHANGELOG.md  Dockerfile  README.md  app.py  compose.yml  debug_test.html  main.py  pyproject.toml  test.py  test_academic_embeddings.py  test_academic_features_simple.py  test_api_rerank.py  test_async_deduplication.py  test_async_search_manager.py  test_parallel_search.py  test_preprint_filter.py  test_rerank.py  test_search.html  test_semantic_search.py  test_stability.py  webapp.py
docs/: ACADEMIC_EMBEDDINGS_GUIDE.md  ADVANCED_ALGORITHMS.md  COMMIT_STANDARDS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_CHANGELOG.md  PERFORMANCE_GUIDE.md  PERFORMANCE_REPORT.md  PREPRINT_FILTER_CONFIG.md  PROXY_SETUP.md  QUICK_START.md  RELEASE_NOTES.md  RERANK_GUIDE.md  STABILITY_BREAKTHROUGH.md  TROUBLESHOOTING.md  WEB_INTERFACE_GUIDE.md
src/searchtools/: __init__.py  academic_embeddings.py  academic_features.py  advanced_algorithms.py  async_http_client.py  async_parallel_search_manager.py  colbert_reranker.py  http_client.py  hybrid_retrieval.py  log_config.py  ml_features.py  models.py  parallel_search_manager.py  preprint_filter.py  proxy_manager.py  pubmed_search.py  rerank_engine.py  search_config.py  search_tools_decorator.py
src/searchtools/searchAPIchoose/: BioRxiv.py  EuropePMC.py  MedRxiv.py  __init__.py  alternative_clinical_sources.py  async_biorxiv.py  async_clinical_trials.py  async_europe_pmc.py  async_medrxiv.py  async_pubmed.py  async_semantic.py  clinical_trials.py  europe_pmc.py  nih_reporter.py  pubmed.py  semantic.py  who_ictrp.py
